--- a/app/src/main/res/layout/activity_pantalla_pedro.xml
+++ b/app/src/main/res/layout/activity_pantalla_pedro.xml
@@ -5,14 +5,25 @@
     android:layout_height="match_parent"
     tools:context=".Pantalla_Pedro">
 
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageViewPedro"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@raw/pedro"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
+
+
     <TextView
-        android:id="@+id/emailTextViewPedro"
+        android:id="@+id/mensajeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:text="Mensaje de Pedro:\n\nHola ! Como estas?\nSaludos desde Mexico"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
-        android:background="@drawable/message_background" />
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:layout_below="@id/imageViewPedro"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
 
 </RelativeLayout>
