--- a/app/src/main/res/layout/activity_pantalla_julian.xml
+++ b/app/src/main/res/layout/activity_pantalla_julian.xml
@@ -5,14 +5,25 @@
     android:layout_height="match_parent"
     tools:context=".Pantalla_Julian">
 
+    <!-- Imagen circular de Julian -->
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageViewJulian"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/julian"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
+
+    <!-- Texto del mensaje de Julian -->
     <TextView
-        android:id="@+id/emailTextViewJulian"
+        android:id="@+id/mensajeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:text="Mensaje de Julian:\n\nQue mas parcero como anda? espero que bien, Pronto le enviare Comida tipica de mi ciudad."
         android:textColor="#000000"
         android:textSize="20sp"
-        android:background="@drawable/message_background" />
+        android:layout_below="@id/imageViewJulian"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
 
 </RelativeLayout>
