--- a/app/src/main/res/layout/activity_pantalla_tenshi.xml
+++ b/app/src/main/res/layout/activity_pantalla_tenshi.xml
@@ -5,14 +5,25 @@
     android:layout_height="match_parent"
     tools:context=".Pantalla_Tenshi">
 
+    <!-- Imagen circular de Tenshi -->
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imageViewTenshi"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/tenshi"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
+
+    <!-- Texto del mensaje de Tenshi -->
     <TextView
-        android:id="@+id/emailTextViewTenshi"
+        android:id="@+id/mensajeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="メッセージ: こんにちは、すでに新しいアニメ シリーズを開始したことをお知らせします。ぜひ先行販売でご覧ください。"
-        android:textSize="20sp"
+        android:text="Mensaje de Tenshi:\n\nこんにちは、調子はどうですか？そうですね、私の新しいアニメのオープニングにあなたを招待したかったのですが、私の国で待っています。"
         android:textColor="#000000"
-        android:background="@drawable/message_background" />
+        android:textSize="20sp"
+        android:layout_below="@id/imageViewTenshi"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"/>
 
 </RelativeLayout>
